avoid several scrollbars on massive modals when selecting a lot of groups/users...

--- a/interfaces/wmi/media/css/licorn_table.css
+++ b/interfaces/wmi/media/css/licorn_table.css
@@ -1,3 +1,7 @@
+#modal {
+  overflow: hidden;
+} 
+
 .table_header{
 	position: fixed;
 	background-color: white;
